# hypertoken

./: .dockerignore  .gitignore  AGENTS.md  Action.js  CLAUDE.md  COMMUNITY_USE_CASES.md  DOCKER.md  Dockerfile  ENTERPRISE_USE_CASES.md  Engine.js  GameLoop.js  NOTICE  Player.js  README.md  SOURCE_PARAMETER_TRACKING_WHITE_PAPER.md  VENDOR_UPDATE_GUIDE.md  WASM_INTEGRATION.md  actions.js  analytics-plugin.js  docker-compose.yml  exporters.js  landing.html  logging-plugin.js  package-lock.json  package.json  pluginLoader.js  start-relay.js  testIntegration.js  testPlugins.js  tsconfig.json  tsconfig.tsbuildinfo
benchmark/: ActionProfiler.js  ActionProfiler.ts  GossipSimulator.ts  profile-results.json  profileActions.js  profileActions.ts
bridge/: README.md  protocol.ts  server.ts
cli/: help.js  index.ts
core/: Chronicle.js  Chronicle.ts  ChronicleWasm.js  ChronicleWasm.ts  ConsensusCore.js  ConsensusCore.ts  Deck.js  Deck.ts  EventBus.d.ts  EventBus.js  IChronicle.ts  ParallelOps.js  ParallelOps.ts  SessionManager.js  SessionManager.ts  Shoe.js  Shoe.ts  Source.js  Source.ts  SourceWasm.js  SourceWasm.ts  Space.js  Space.ts  SpaceWasm.js  SpaceWasm.ts  Stack.js  Stack.ts  StackWasm.js  StackWasm.ts  StorageAdapter.ts  SyncManager.ts  Table.js  Table.ts  Token.js  Token.ts  UniversalWorker.ts  WasmBridge.js  WasmBridge.ts  WasmChronicleAdapter.ts  WasmWorker.js  (+17 more)
core-rs/: .gitignore  Cargo.toml  README.md  build.sh
core-rs/src/: actions.rs  agent.rs  batch.rs  chronicle.rs  gamestate.rs  lib.rs  parallel.rs  source.rs  space.rs  stack.rs  token.rs  token_ops.rs  types.rs  utils.rs
core-rs/src/chronicle_actions/: agent.rs  game_loop.rs  game_state.rs  helpers.rs  mod.rs  rules.rs  source.rs  space.rs  stack.rs
docs/: AI_CONTRIBUTOR_GUIDE.md  ARCHITECTURE.md  BROWSER.md  EXTENDING.md  FIRST_GAME.md  GETTING_STARTED.md  GOSSIP_SCALING.md  MIGRATION.md  ONNX_EXPORT.md  PATTERNS.md  PERSISTENCE.md  PYTHON_BRIDGE.md  TESTING.md  WORKER_MODE.md
engine/: ACTIONS.md  ACTIONS_COMPLETE.md  Action.js  Action.ts  Agent.js  Agent.ts  Engine.js  Engine.ts  GameLoop.js  GameLoop.ts  HistoryManager.ts  NetworkManager.ts  Player.js  Player.ts  PluginHost.js  PluginHost.ts  Policy.js  Policy.ts  Recorder.js  Recorder.ts  RuleEngine.js  RuleEngine.ts  Script.js  Script.ts  WasmManager.ts  actions-extended.js  actions-extended.ts  actions.js  actions.ts  payloads.ts  testActions.js  types.js  types.ts
interface/: CLIInterface.js  CLIInterface.ts  Gym.js  Gym.ts  HumanInterface.js  HumanInterface.ts  Interpreter.js  Interpreter.ts  Narrator.js  Narrator.ts  NetworkInterface.js  NetworkInterface.ts  ONNXAgent.ts  OpenAIAgent.js  PettingZoo.ts  RelayServer.js  RelayServer.ts  index.ts
mcp/: README.md  server.ts
network/: AuthoritativeServer.ts  E2EEncryption.ts  HybridPeerManager.js  HybridPeerManager.ts  MatchmakingManager.ts  PeerConnection.js  PeerConnection.ts  PresenceManager.ts  RateLimiter.ts  RelayServer.js  RelayServer.ts  RoomAuthoritativeServer.ts  RoomManager.ts  RoutedPeerManager.ts  SignalingService.js  SignalingService.ts  StateSyncManager.ts  UniversalRelayServer.ts  WebRTCConnection.js  WebRTCConnection.ts
patterns/: cards.js  resource-limits.js  testRulePatterns.js  turn-order.js  win-conditions.js
playground/: README.md  index.html  playground.js
plugins/: analytics-plugin.js  logging-plugin.js  pluginLoader.js  save-state-plugin.js
python/: README.md  pyproject.toml
python/examples/: jupyter_demo.ipynb  train_pettingzoo.py
python/hypertoken/: __init__.py  client.py  export.py  spaces.py  utils.py
schemas/: session-state-schema.json  token-set.schema.json
scripts/: verify-vendor-setup.sh
test/: BENCHMARKS.md  README.md  benchmark-worker-overhead.js  benchmark-worker-overhead.ts  benchmark-worker.js  benchmark-worker.ts  benchmarkChronicle.js  benchmarkChronicle.ts  benchmarkParallel.js  benchmarkParallel.ts  benchmarks-memory.js  benchmarks-memory.ts  benchmarks.js  benchmarks.ts  test-action-dispatcher.js  test-action-dispatcher.ts  test-chronicle-wasm.js  test-chronicle-wasm.ts  test-engine-worker.js  test-engine-worker.ts  test-wasm-worker.js  test-wasm-worker.ts  testAgent.js  testAgent.ts  (+47 more)
(+235 files in other folders)
